methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:19: error: not found: value LeveBrosse
  LeveBrosse()
  ^